cabal-version:       3.0
name:                river.hs
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/strake/river.hs
bug-reports:         https://github.com/strake/river.hs/issues
license:             BSD3
license-file:        LICENSE
author:              M Farkas-Dyck
maintainer:          strake888@gmail.com
copyright:           2019 M Farkas-Dyck
category:            Control,Streaming
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.5

common c
  build-depends:       base ^>= 4.12.0.0
                     
  ghc-options:         
                     -Wall
                     -Wcompat
                     -Wredundant-constraints
                     -Wno-name-shadowing
                     -Wincomplete-uni-patterns
                     -Wincomplete-record-updates
                     -Werror=incomplete-patterns
                     -Werror=incomplete-uni-patterns
                     -Werror=incomplete-record-updates
                     -Werror=missing-fields
                     -Werror=missing-methods
  default-language:    Haskell2010
  default-extensions:  UnicodeSyntax
                       LambdaCase
                       EmptyCase
                       InstanceSigs
                       PartialTypeSignatures
                       PolyKinds
                       ConstraintKinds
                       FlexibleContexts
                       FlexibleInstances
                       MonadComprehensions
                       StandaloneDeriving
                       DeriveFunctor
                       DeriveFoldable
                       DeriveTraversable

library
  import:              c
  hs-source-dirs:      src
  exposed-modules:     River.hs
                       
  build-depends:

executable river.hs
  import:              c
  hs-source-dirs:      x
  main-is:             Main.hs
  build-depends:       river.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite test
  import:              c
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       river.hs
                     

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark bench
  import:              c
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs

  build-depends:       gauge
                     , river.hs
                     

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

source-repository head
  type:                git
  location:            https://github.com/strake/river.hs.git
